--- a/main.feedback/templates/.default/style.css
+++ b/main.feedback/templates/.default/style.css
@@ -4,3 +4,11 @@ div.mf-name input, div.mf-email input {width:60%;}
 div.mf-message textarea {width: 60%;}
 span.mf-req {color:red;}
 div.mf-ok-text {color:green; font-weight:bold; padding-bottom: 1em;}
+
+.error {
+	border: 1px solid red!important;
+	background-color: mistyrose!important;
+}
+.error-message {
+	color: red;
+}
